src/styles/main.scss
@import "~bootstrap/scss/bootstrap";
@import "~@fortawesome/fontawesome-free/css/all.min.css";
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
@import './vars.scss';

html {
  scroll-behavior: smooth;
}

body {
  background-color: $maincolor;
}

.navbar {
  height: 100%;
  width: 200px;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: $secondarycolor;
  color: $maincolor;
  overflow: auto;
  padding-top: 20px;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-size: 20px;
}

.navbar a {
  display: block;
}

a#navToWork.nav-link, a#navToBio.nav-link, a#navToTech.nav-link, a#navToLanding.nav-link {
  color: $maincolor;
}

a#navToWork.nav-link:hover, a#navToBio.nav-link:hover, a#navToTech.nav-link:hover, a#navToLanding.nav-link:hover {
  background-color: $secondarylightcolor;
}

a#email.nav-link, a#github.nav-link, a#linkedin.nav-link {
  color: $maincolor;
  text-align: center;
}

a#email.nav-link:hover, a#github.nav-link:hover, a#linkedin.nav-link:hover {
  background-color: $secondarylightcolor;
}

.masthead {
  height: 100vh;
  min-height: 500px;
  background-image: url('https://source.unsplash.com/BtbjCFUvBXs/1920x1080');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 1.25em;
  color: $mainfontcolor;
}

.about-me {
  height: 100vh;
  min-height: 500px;
  background-color: $secondaryfontcolor;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 1.25em;
  color: $mainfontcolor;
  margin-bottom: 5%;
  margin-top: 5%;
}

.bioheader {
  margin-top: 5%;
  margin-bottom: 80%;
  margin-right: 80%;
}

.work-page {
  margin-left: 10%;
  margin-bottom: 5%;
  margin-top: 5%;
}

.card-img-left {
  height: 60rem;
  width: 20rem;
  margin-left: 0;
}

.card {
  background-color: $maincolor;
  border: none;
  margin: 10px;
}

.card-title, h5 {
  font-family: 'Raleway', sans-serif;
  font-weight: 500;
  color: #948e70;
}

.description {
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-style: normal;
  color: $mainfontcolor;
}

.btn {
  align-items: left;
}

#tech-logos {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 100%;
}

.tech-page {
  height: 100vh;
  min-height: 500px;
  background-image: url('https://github.com/hmparsons-sde/portfolio-site/blob/main/src/images/Portfolio%20Mock-up%20(4).png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 1.25em;
  color: $mainfontcolor;
}

/* For mobile phones: */
[class*="col-"] {
  width: 100%;
}

@media only screen and (min-width: 600px) {
  /* For tablets: */
  .col-s-1 {width: 8.33%;}
  .col-s-2 {width: 16.66%;}
  .col-s-3 {width: 25%;}
  .col-s-4 {width: 33.33%;}
  .col-s-5 {width: 41.66%;}
  .col-s-6 {width: 50%;}
  .col-s-7 {width: 58.33%;}
  .col-s-8 {width: 66.66%;}
  .col-s-9 {width: 75%;}
  .col-s-10 {width: 83.33%;}
  .col-s-11 {width: 91.66%;}
  .col-s-12 {width: 100%;}
}
@media only screen and (min-width: 768px) {
  /* For desktop: */
  .col-1 {width: 8.33%;}
  .col-2 {width: 16.66%;}
  .col-3 {width: 25%;}
  .col-4 {width: 33.33%;}
  .col-5 {width: 41.66%;}
  .col-6 {width: 50%;}
  .col-7 {width: 58.33%;}
  .col-8 {width: 66.66%;}
  .col-9 {width: 75%;}
  .col-10 {width: 83.33%;}
  .col-11 {width: 91.66%;}
  .col-12 {width: 100%;}
}

@media screen and (max-width: 700px) {
  .navbar {
    width: 100%;
    height: auto;
    position: relative;
  }
  .navbar a {float: left;}
  div.content {margin-left: 0;}
}

@media screen and (max-width: 400px) {
  .navbar a {
    text-align: center;
    float: none;
  }
}

@media only screen and (max-width: 993px) {
  .navbar-toggler {
    color: white;
  }
  .collapse {
    color: white;
  }
  .menu{
    background-color: $secondarycolor;
    color: $secondaryfontcolor;
    height: 100px;
    width: 100%;
    position:fixed;
    top:0;
    left:0;
    z-index:5;
    outline:none;
    text-decoration: none;
    ul{
      list-style:none;
      display: block;
      justify-content: left;
      padding:0.5em 0;
      margin:0;
      li{
        color: $secondaryfontcolor;
        font-size: 24px;
        font-weight:regular;
        background-repeat:no-repeat;
        background-position:left center;
        background-size:auto 20px;
        transition:all 0.15s linear;
      }
    }
  }
}

